<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/visionToolFragment"
        android:icon="@drawable/ic_nav_vision"
        android:title="@string/nav_vision_tool" />
    <item
        android:id="@+id/acupressureFragment"
        android:icon="@drawable/ic_nav_acupressure"
        android:title="@string/nav_acupressure" />
    <item
        android:id="@+id/leeBuLeeFragment"
        android:icon="@drawable/ic_nav_leebulee"
        android:title="@string/nav_leebulee" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
