<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.eyeprotect.nav.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/visionToolFragment"
        android:name="com.example.eyeprotect.nav.VisionToolFragment"
        android:label="@string/nav_vision_tool" />

    <fragment
        android:id="@+id/acupressureFragment"
        android:name="com.example.eyeprotect.nav.AcupressureFragment"
        android:label="@string/nav_acupressure" />

    <fragment
        android:id="@+id/leeBuLeeFragment"
        android:name="com.example.eyeprotect.nav.LeeBuLeeFragment"
        android:label="@string/nav_leebulee" />

    <fragment
        android:id="@+id/calibrationFragment"
        android:name="com.example.eyeprotect.nav.CalibrationFragment"
        android:label="@string/start_calibration" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.eyeprotect.nav.SettingsFragment"
        android:label="@string/nav_settings">
        <argument
            android:name="openCalibration"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>

</navigation>
